--- a/FScanner/bin/AndroidManifest.xml
+++ b/FScanner/bin/AndroidManifest.xml
@@ -22,7 +22,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
+
+        <receiver
+            android:name=".FolderWidget"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/folder" />
+        </receiver>
+
         <service android:name=".ScannerService" />
     </application>
 
